<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PILL RIGHT</string>
    <string name="app_name_1">PILL</string>
    <string name="app_name_2">RIGHT</string>
    <string name="channel_description">PILL RIGHT push notification</string>
    <string name="channel_name">PILL RIGHT</string>
    <string name="alamr_group_key">ggj.PILLRIGHT</string>
    <string name="notification_title">복용 알람</string>
    <string name="notification_content">드실 시간입니다!</string>

    <string name="page_name_pill_list">설정된 약알람 목록</string>
    <string name="page_name_check_pill">알람 확인</string>
    <string name="page_name_add_pill">알람추가</string>
    <string name="page_name_calendar">캘린더</string>
    <string name="page_name_search">성분 검색</string>
    <string name="page_name_find">병원·약국 찾기</string>
    <string name="button_name_find_hospital">병원 찾기</string>
    <string name="button_name_find_pharmacy">약국 찾기</string>
    <string name="url_search">https://m.terms.naver.com/medicineSearch.nhn</string>     <!--성분 검색-->
    <string name="url_find_hospital">https://www.goodoc.co.kr/hospitals</string>     <!--병원 찾기 -->
    <string name="url_find_pharmacy">https://www.goodoc.co.kr/pharmacies</string>     <!--병원 찾기 -->

    <!-- CalendarFragment -->
    <string name="record_pill_list_label">복용 기록</string>
    <string name="button_not_take">미복용</string>
    <string name="button_take">복용 완료</string>
    <string name="button_take_later">복용 예정</string>

    <string name="dialog_check_title">복용 확인</string>
    <string name="dialog_check_content">복용기록을 변경합니다..</string>


</resources>
